fixed overflow

--- a/css/etching.css
+++ b/css/etching.css
@@ -932,7 +932,7 @@ footer {
 
     .structures-desktop {
         width: 1100px;
-        height: 1900px;
+        height: 2626px;
         position: relative;
     }
 
